made #done and #error hidden at startup

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 				</ul>
 			</div>
 		</section>
-		<section id="error">
+		<section id="error" class="hide">
 				<h2>Error</h2>
 		</section>
-		<section id="done">
+		<section id="done" class="hide">
 				<h2>Complete</h2>
 		</section>
 		<section class="result dark">
