fixed spacing overflow issue by floating the dropdowns

--- a/index.html
+++ b/index.html
@@ -38,21 +38,25 @@
 		</section>
 		<section id="header" class="dark">
 				<div id="settings">
-					<span>Saw kerf:</span>
-					<select name="kerf" id="kerf">
-						<option>0"</option>
-						<option>1/16"</option>
-						<option selected="selected">1/8"</option>
-						<option>1/4"</option>
-						<option>1/2"</option>
-					</select>
-					<span class="spacer">Mode:</span>
-					<select name="mode" id="mode">
-						<option selected="selected">Auto</option>
-						<option>Optimal (Slow)</option>
-						<option>Sub-Optimal 1</option>
-						<option>Sub-Optimal 2</option>
-					</select>
+					<div class="left">
+						<span>Saw kerf:</span>
+						<select name="kerf" id="kerf">
+							<option>0"</option>
+							<option>1/16"</option>
+							<option selected="selected">1/8"</option>
+							<option>1/4"</option>
+							<option>1/2"</option>
+						</select>
+					</div>
+					<div class="right">
+						<span>Mode:</span>
+						<select name="mode" id="mode">
+							<option selected="selected">Auto</option>
+							<option>Optimal (Slow)</option>
+							<option>Sub-Optimal 1</option>
+							<option>Sub-Optimal 2</option>
+						</select>
+					</div>
 					<br/>
 					<button id="run" type="button">Run</button>
 				</div>
