--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 		<link rel='stylesheet' type='text/css' href='css/style.css'>
 
 		<!-- JS -->
-		<script type="text/javascript" src='js/jquery-1.9.1.min.js'></script>
-		<script type="text/javascript" src='js/util.js'></script>
-		<script type="text/javascript" src='js/solve.js'></script>
-		<script type="text/javascript" src='js/fast_solve_1.js'></script>
-		<script type="text/javascript" src='js/fast_solve_2.js'></script>
-		<script type="text/javascript" src='js/segmenter.js'></script>
-		<script type="text/javascript" src='js/main.js'></script> <!-- $(window).load() -->
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+		<script src='js/util.js'></script>
+		<script src='js/solve.js'></script>
+		<script src='js/fast_solve_1.js'></script>
+		<script src='js/fast_solve_2.js'></script>
+		<script src='js/segmenter.js'></script>
+		<script src='js/main.js'></script> <!-- $(window).load() -->
 
 		<!--[if lt IE 9]>
 			<script type="text/javascript" src="js/html5shiv.js"></script>
