--- a/index.html
+++ b/index.html
@@ -33,6 +33,39 @@
 
 	</head>
 	<body onunload=''>
+		<aside>
+			<h1>Lumber Segmenter</h1>
+			<p>
+				Calculates cuts of lumber that minimize loss. Enter your lengths and quantities below, and a cut pattern will be generated.
+			</p>
+			<p>
+			 	If a source quantity is left blank, it will be treated as an unlimited resource. Fractional length measurements such as "34 1/2" are welcome.
+			</p>
+			<h2>Source Material</h2>
+			<table id="sources">
+				<tr>
+					<th>Length</th>
+					<th>Quantity</th>
+					<th></th>
+				</tr>
+				<tr>
+					<td><input type="input"/></td> <!-- length -->
+					<td><input type="number"/></td> <!-- quantity -->
+					<td><button>X</button></td>
+				</tr>
+			</table>
+			<table id="segments">
+				<tr>
+					<td></td>
+					<td></td>
+				</tr>
+			</table>
+		</aside>
+
+
+
+
+		<!--
 		<section>
 			<h1>Lumber Segmenter</h1>
 		</section>
@@ -62,7 +95,7 @@
 				</div>
 				<div id="instructions">
 					<p>
-						This tool tries to calculate cuts of lumber that minimize loss. Enter your lengths and quantities below, and a cut pattern will be generated.
+						Calculates cuts of lumber that minimize loss. Enter your lengths and quantities below, and a cut pattern will be generated.
 					</p>
 					<br/>
 					<p>
@@ -113,20 +146,6 @@
 				<h1></h1>
 				<canvas height='20' width='666'></canvas>
 		</section>
-
-		<script type="text/javascript">
-		
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-47261656-1']);
-		  _gaq.push(['_trackPageview']);
-		
-		  (function() {
-		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
-		
-		</script>
-		
+		-->
 	</body>
  </html>
