--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td><input type="input"/></td> <!-- length -->
-						<td><input type="number" min="0"/></td> <!-- quantity -->
+						<td><input class="length" type="input"/></td>
+						<td><input class="quantity" type="number" min="0"/></td>
 						<td><button class="delete">X</button></td>
 					</tr>
 				</tbody>
@@ -94,15 +94,17 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td><input type="input"/></td> <!-- length -->
-						<td><input type="number" min="0"/></td> <!-- quantity -->
+						<td><input class="length" type="input"/></td>
+						<td><input class="quantity" type="number" min="0"/></td>
 						<td><button class="delete">X</button></td>
 					</tr>
 				</tbody>
 			</table>
 		</aside>
-		<section id="layout">
-			
+		<section id="output">
+			<header>
+				<button>Run</button>
+			</header>
 		</section>
 
 
