--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 				Calculates cuts of lumber that minimize loss. Enter your lengths and quantities below, and a cut pattern will be generated.
 			</p>
 			<p>
-			 	If a source quantity is left blank, it will be treated as an unlimited resource. Fractional length measurements such as "34 1/2" are welcome.
+			 	If a source quantity is left blank, it will be treated as an unlimited resource. Fractional length measurements such as "34 1/2" are welcome. Units are irrelevant, as long as they're consistent.
 			</p>
 
-			<h2>Settings</h2>
+			<!-- <h2>Settings</h2> -->
 			<table id="settings">
 				<tbody>
 					<tr>
@@ -101,22 +101,8 @@
 			<header>
 				<button id="run">Run</button>
 			</header>
-			<section id="output"></section>
+			<ul id="output"></ul>
 			<section id="errors"></section>
 		</div>
-
-
-		<!--
-		<section id="error" class="hide">
-				<h2>Error</h2>
-		</section>
-		<section id="done" class="hide">
-				<h2>Complete</h2>
-		</section>
-		<section class="result dark">
-				<h1></h1>
-				<canvas height='20' width='666'></canvas>
-		</section>
-		-->
 	</body>
  </html>
