don't need the inner box

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 						</tr>
 					</tbody>
 				</table>
+
 			</section>
 		</aside>
 
@@ -101,16 +102,14 @@
 			<ul id="output"></ul>
 			<section id="errors"></section>
 			<section id="welcome">
-				<div class="box">
-					<h1>Lumber Segmenter</h1>
-					<p>
-						Calculates cuts of lumber that minimize loss. Enter your lengths and quantities below, and a cut pattern will be generated.
-					</p>
-					<p>
-					 	If a source quantity is left blank, it will be treated as an unlimited resource. Fractional length measurements such as "34 1/2" are welcome. Units are irrelevant, as long as they're consistent.
-					</p>
-				</div>
+				<h1>Lumber Segmenter</h1>
+				<p>
+					Calculates cuts of lumber that minimize loss. Enter the length and quantity for your source lumber, and your desired cuts, and a cut pattern will be generated.
+				</p>
+				<p>
+					If a source quantity is left blank, it will be treated as an unlimited resource. Fractional length measurements such as "34 1/2" are welcome. Units are irrelevant, as long as they're consistent.
+				</p>
 			</section>
 		</div>
 	</body>
- </html>
+</html>
