--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 					</tbody>
 				</table>
 
-				<h2>Cuts<button id="add-desire" class="add">+</button></h2>
+				<h2>Cuts<button id="add-cut" class="add">+</button></h2>
 
-				<table id="desires">
+				<table id="cuts">
 					<thead>
 						<tr>
 							<th></th><th>Length</th><th>Quantity</th><th></th>
