moved solvers to seperate dir

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 		<!-- JS -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 		<script src='js/util.js'></script>
-		<script src='js/solve.js'></script>
-		<script src='js/fast_solve_1.js'></script>
-		<script src='js/fast_solve_2.js'></script>
-		<script src='js/segmenter.js'></script>
+		<script src='js/solve/full_solve.js'></script>
+		<script src='js/solve/fast_solve_1.js'></script>
+		<script src='js/solve/fast_solve_2.js'></script>
+		<script src='js/solve/segmenter.js'></script>
 		<script src='js/main.js'></script> <!-- $(window).load() -->
 
 		<!--[if lt IE 9]>
@@ -47,8 +47,8 @@
 								<select id="mode">
 									<option value="auto" selected="selected">Auto</option>
 									<option value="solve">Optimal (Slow)</option>
-									<option value="fast_1">Sub-Optimal 1</option>
-									<option value="fast_2">Sub-Optimal 2</option>
+									<option value="fast_1">Suboptimal 1</option>
+									<option value="fast_2">Suboptimal 2</option>
 								</select>
 							</td>
 							<th>Mode</th>
